--- a/frontend/src/sections/AboutMe/AboutMe.module.css
+++ b/frontend/src/sections/AboutMe/AboutMe.module.css
@@ -15,6 +15,7 @@
   border-radius: var(--border-radius-xl);
   background-color: var(--color-background-component);
   width: 100%;
+  box-sizing: border-box;
 }
 
 .subsection {
